<?xml version="1.0"?>
<package>
  <name>jaco_on_table</name>
  <version>0.0.0</version>
  <description>URDF model for the jaco arm on a table</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/jaco_on_table</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jaco_description</build_depend>
  <run_depend>jaco_description</run_depend>
  <build_depend>xacro</build_depend>

  <!-- Required to load up the jaco in the tutorial with the Xtion -->
  <run_depend>common_sensors</run_depend> 
  
  <run_depend>xacro</run_depend>
  <run_depend>jaco_description</run_depend>
  <run_depend>jaco_joints</run_depend>
  <run_depend>jaco_gazebo</run_depend>
  <run_depend>gazebo_world_plugin_loader</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
